--- a/themes/dark/toolbar.css
+++ b/themes/dark/toolbar.css
@@ -5,7 +5,10 @@ core-toolbar {
     font-weight: 200;
     border-bottom: 1px solid black;
 }
-
+#text-input {
+    margin-left: 20px;
+    color: #444;
+}
 [disabled] {
     opacity: 0.7;
 }
