--- a/themes/dude/toolbar.css
+++ b/themes/dude/toolbar.css
@@ -4,7 +4,10 @@ core-toolbar {
     font-family: "Varela round", sans-serif;
     border-bottom: 1px solid #ccc;
 }
-
+#text-input {
+    margin-left: 20px;
+    color: #ccc;
+}
 [disabled] {
     opacity: 0.7;
 }
