Update themes with new dude-style component.

--- a/themes/light/app.css
+++ b/themes/light/app.css
@@ -1,7 +1,6 @@
 .notification {
     color: #eee;
-    font-family: helvetica, sans-serif;
-    font-weight: 200;
+    font-family: arial, sans-serif;
     border-radius: 0;
     font-size: .8em;
     box-shadow: none;
