--- a/themes/dude/panel.css
+++ b/themes/dude/panel.css
@@ -17,3 +17,7 @@
 }
 ::content dude-sidebar.left { border-right: 1px solid #ccc; }
 ::content dude-sidebar.right { border-left: 1px solid #ccc; }
+
+::content dude-toolbar-input /deep/ input[is="core-input"] {
+    color: #ccc;
+}
