--- a/themes/audigame/app.css
+++ b/themes/audigame/app.css
@@ -1,6 +1,6 @@
 .notification {
     color: #eee;
-    font-family: "Roboto 2", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 200;
     border-radius: 3px;
     font-size: .8em;
