--- a/themes/blueprint/graph.css
+++ b/themes/blueprint/graph.css
@@ -1,6 +1,6 @@
 /* General */
 #svg {
-    background: #2b2b2b;
+    background: rgba(52, 152, 219, 1.0);
 }
 
 /* Types */
@@ -8,13 +8,13 @@
 #svg .type-stream { fill: rgba(220, 220, 220, 1); stroke: rgba(220, 220, 220, 1); }
 #svg .type-boolean { fill: rgba(28, 188, 156, 1); stroke: rgba(28, 188, 156, 1); }
 #svg .type-number { fill: rgba(241, 196, 15, 1); stroke: rgba(241, 196, 15, 1); }
-#svg .type-string { fill: rgba(230, 126, 34, 1); stroke: rgba(230, 126, 34, 1); }
-#svg .type-vec3 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#svg .type-vec2 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#svg .type-color { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#svg .type-list { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#svg .type-dictionary { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#svg .type-resource { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-string { fill: rgb(255, 167, 38); stroke: rgb(255, 167, 38); }
+#svg .type-vec3 { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
+#svg .type-vec2 { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
+#svg .type-color { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
+#svg .type-list { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
+#svg .type-dictionary { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
+#svg .type-resource { fill: rgba(50, 50, 50, 1); stroke: rgba(50, 50, 50, 1); }
 #svg .empty {
     fill: transparent;
     stroke-width: 1px;
@@ -27,39 +27,34 @@
 
 /* Block and groups */
 #svg .group .title, #svg .block .title {
-    font-family: helvetica, sans-serif;
-    /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
+    font-family: "Cherry Cream Soda", sans-serif;
     font-weight: 200;
     font-size: .9em;
     stroke: transparent;
 }
 #svg .group .background, #svg .block .background {
-    fill: rgba(30, 30, 30, 0.8);
-}
-#svg .group:hover .background, #svg .block:hover .background {
-    fill: rgba(20, 20, 20, .8);
+    fill: rgba(52, 152, 219, 1.0);
+    stroke-width: 2px;
 }
 #svg .group.selected .background, #svg .block.selected .background {
-    fill: rgba(20, 20, 20, .8);
-    stroke-width: 2px;
+    stroke-dasharray: 10, 5;
 }
 
 /* Blocks */
 #svg .block .description {
-    fill: #999;
-    font-family: helvetica, sans-serif;
+    fill: #ccc;
+    font-family: "Indie Flower", sans-serif;
     font-weight: 200;
     stroke: transparent;
-    /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
     font-size: .7em;
 }
 
 /* Group and Action */
 #svg .group .background, #svg .action .background {
-    stroke: black;
+    stroke: white;
 }
 #svg .group .title, #svg .action .title {
-    fill: #c4c4c4;
+    fill: #eee;
 }
 
 /* Getter */
