--- a/themes/blueprint/app.css
+++ b/themes/blueprint/app.css
@@ -1,8 +1,8 @@
 .notification {
     color: #eee;
-    font-family: helvetica, sans-serif;
+    font-family: "Cherry Cream Soda", sans-serif;
     font-weight: 200;
-    border-radius: 0;
+    border-radius: 5px;
     font-size: .8em;
     box-shadow: none;
 }
