--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -5,7 +5,7 @@
     font-family: "Varela", sans-serif;
     color: rgba(230, 126, 34, 1);
     background: #222;
-    height: 30px;
+    height: 40px;
 }
 ::content dude-toolbar.top { border-bottom: 1px solid rgba(230, 126, 34, 1); }
 ::content dude-toolbar.bottom { border-top: 1px solid rgba(230, 126, 34, 1); }
@@ -19,11 +19,10 @@
 
 /* Toolbar command */
 ::content dude-toolbar /deep/ paper-icon-button {
-    padding: 5px;
 }
-::content dude-toolbar /deep/ paper-icon-button /deep/ core-icon[role=img] {
-    width: 15px;
-    height: 15px;
+::content dude-toolbar /deep/ paper-icon-button /deep/ core-icon {
+    /*width: 15px;*/
+    /*height: 15px;*/
 }
 
 /* Sidebar */
