Improved settings css.

--- a/themes/audigame/app.css
+++ b/themes/audigame/app.css
@@ -32,10 +32,18 @@
 #error { background: rgba(231, 76, 60, 0.8); }
 #success { background: rgba(46, 204, 113, 0.8); }
 dude-sidebar .search-result {
-    text-align: center;
     padding: 10px;
     border-bottom: 1px solid #444;
 }
 dude-sidebar .search-result:last-child {
     border-bottom: none;
+}
+paper-item {
+    color: #444;
+}
+paper-toggle-button::shadow #toggleContainer[checked] .toggle {
+    background: rgb(243, 156, 18);
+}
+paper-toggle-button::shadow #toggleContainer[checked] .toggle-ink {
+    color: rgba(243, 156, 18, 1);
 }
