--- a/themes/dark/graph.css
+++ b/themes/dark/graph.css
@@ -27,9 +27,9 @@
 
 /* Block and groups */
 #svg .group .title, #svg .block .title {
-    font-family: helvetica, sans-serif;
-    /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
-    font-weight: 200;
+    /*font-family: arial, sans-serif;*/
+    font-family: "Varela", sans-serif;
+    font-weight: normal;
     font-size: .9em;
     stroke: transparent;
 }
@@ -47,8 +47,8 @@
 /* Blocks */
 #svg .block .description {
     fill: #999;
-    font-family: helvetica, sans-serif;
-    font-weight: 200;
+    /*font-family: arial, sans-serif;*/
+    font-family: "Lato", sans-serif;
     stroke: transparent;
     /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
     font-size: .7em;
