--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -52,6 +52,11 @@
     border: none;
 }
 ::content dude-sidebar .search-result {
+    color: #aaa;
+    padding: 10px;
+}
+::content dude-sidebar .search-result.core-selected {
+    color: #eee;
     padding: 10px;
 }
 ::content dude-sidebar .search-result:not(:last-child) {
