--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -51,7 +51,25 @@
     padding: 0;
     border: none;
 }
-::content dude-sidebar .search-result {
+::content dude-sidebar .title {
+    text-transform: uppercase;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+::content dude-sidebar .subtitle {
+    font-style: italic;
+    color: #aaa;
+    margin-top: 10px;
+}
+::content dude-sidebar .box {
+    background: rgba(0, 0, 0, .2);
+    border-radius: 3px;
+    padding: 20px;
+    margin: 15px 0;
+}
+
+::content dude-sidebar .search-result, ::content dude-sidebar .search-not-found {
     color: #aaa;
     padding: 10px;
 }
