--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -68,10 +68,19 @@
     padding: 20px;
     margin: 15px 0;
 }
-
+::content dude-sidebar .search-list {
+    overflow: auto;
+    max-height: 100%;
+}
 ::content dude-sidebar .search-result, ::content dude-sidebar .search-not-found {
     color: #aaa;
     padding: 10px;
+}
+::content dude-sidebar .search-result {
+    cursor: pointer;
+}
+::content dude-sidebar .search-result:hover {
+    color: #eee;
 }
 ::content dude-sidebar .search-result.core-selected {
     color: #eee;
@@ -82,4 +91,21 @@
 }
 ::content dude-sidebar .search-result core-icon {
     margin-right: 10px;
+}
+::content dude-sidebar cg-dropdown /deep/ #header {
+    text-transform: uppercase;
+    border-bottom: 1px solid #444;
+    cursor: pointer;
+    padding: 10px;
+}
+::content dude-sidebar cg-dropdown .row {
+    opacity: 0.6;
+    cursor: pointer;
+    padding: 10px 0;
+}
+::content dude-sidebar cg-dropdown .row:hover {
+    opacity: 1;
+}
+::content dude-sidebar cg-dropdown .row.core-selected {
+    display: none;
 }
