--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -68,10 +68,14 @@
     border-radius: 3px;
     padding: 20px;
     margin: 15px 0;
+    text-align: center;
 }
 ::content dude-sidebar .box input[is="core-input"] {
     width: 100%;
     color: #ccc;
+}
+::content dude-sidebar .box cg-file-button /deep/ paper-button {
+    color: rgb(243, 156, 18);
 }
 
 ::content dude-sidebar .search-list {
