--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -1,4 +1,5 @@
 @import url(themes/audigame/types.css);
+@import url(themes/base/panel.css);
 
 :host {
     background: #333;
@@ -23,13 +24,6 @@
 }
 
 /* Toolbar command */
-::content dude-toolbar /deep/ paper-icon-button {
-}
-::content dude-toolbar /deep/ paper-icon-button /deep/ core-icon {
-    /*width: 15px;*/
-    /*height: 15px;*/
-}
-
 ::content dude-toolbar /deep/ paper-icon-button[disabled] {
     color: rgba(243, 156, 18, 0.5);
 }
@@ -40,17 +34,9 @@
     font-family: "Lato", sans-serif;
     color: #ddd;
     background: #222;
-    padding: 10px;
-    transition: .2s;
-    width: 200px;
 }
 ::content dude-sidebar.left { border-right: 1px solid rgb(243, 156, 18); }
 ::content dude-sidebar.right { border-left: 1px solid rgb(243, 156, 18); }
-::content dude-sidebar:not(.selected) {
-    width: 0;
-    padding: 0;
-    border: none;
-}
 ::content dude-sidebar .title {
     text-transform: uppercase;
     text-align: center;
@@ -63,59 +49,12 @@
     margin-top: 10px;
 }
 ::content dude-sidebar .box {
-    box-sizing: border-box;
     background: rgba(0, 0, 0, .2);
     border-radius: 3px;
-    padding: 20px;
-    margin: 15px 0;
-    text-align: center;
 }
 ::content dude-sidebar .box input[is="core-input"] {
-    width: 100%;
     color: #ccc;
 }
 ::content dude-sidebar .box cg-file-button /deep/ paper-button {
     color: rgb(243, 156, 18);
-}
-
-::content dude-sidebar .search-list {
-    overflow: auto;
-    max-height: 100%;
-}
-::content dude-sidebar .search-result, ::content dude-sidebar .search-not-found {
-    color: #aaa;
-    padding: 10px;
-}
-::content dude-sidebar .search-result {
-    cursor: pointer;
-}
-::content dude-sidebar .search-result:hover {
-    color: #eee;
-}
-::content dude-sidebar .search-result.core-selected {
-    color: #eee;
-    padding: 10px;
-}
-::content dude-sidebar .search-result:not(:last-child) {
-    border-bottom: 1px solid #444;
-}
-::content dude-sidebar .search-result core-icon {
-    margin-right: 10px;
-}
-::content dude-sidebar cg-dropdown /deep/ #header {
-    text-transform: uppercase;
-    border-bottom: 1px solid #444;
-    cursor: pointer;
-    padding: 10px;
-}
-::content dude-sidebar cg-dropdown .row {
-    opacity: 0.6;
-    cursor: pointer;
-    padding: 10px 0;
-}
-::content dude-sidebar cg-dropdown .row:hover {
-    opacity: 1;
-}
-::content dude-sidebar cg-dropdown .row.core-selected {
-    display: none;
 }
