--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -8,7 +8,8 @@
 /* Toolbar */
 ::content dude-toolbar {
     padding: 5px;
-    font-family: "Varela", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
     color: rgb(243, 156, 18);
     background: #222;
     height: 40px;
@@ -19,6 +20,7 @@
 /* Toolbar input */
 ::content dude-toolbar-input /deep/ input[is="core-input"] {
     font-family: "Lato", sans-serif;
+    font-weight: 300;
     color: #ccc;
     padding: 5px;
 }
@@ -32,6 +34,7 @@
 /* Sidebar */
 ::content dude-sidebar {
     font-family: "Lato", sans-serif;
+    font-weight: 300;
     color: #ddd;
     background: #222;
 }
