--- a/themes/audigame/panel.css
+++ b/themes/audigame/panel.css
@@ -1,6 +1,7 @@
 /**
  * Types
  */
+
 ::content dude-sidebar .search-result core-icon.type-stream, ::content cg-dropdown .row.type-stream { color: rgba(220, 220, 220, 1);}
 ::content dude-sidebar .search-result core-icon.type-sound, ::content cg-dropdown .row.type-sound { color: rgba(241, 196, 15, 1);}
 ::content dude-sidebar .search-result core-icon.type-string, ::content cg-dropdown .row.type-string { color: rgba(230, 126, 34, 1);}
@@ -10,6 +11,7 @@
 /**
  * Base
  */
+
 ::content dude-toolbar [data-state="root"] {
     margin: auto;
     padding: 0 20px;
@@ -83,6 +85,10 @@
 ::content dude-sidebar .box input[is="core-input"] {
     width: 100%;
 }
+
+/**
+ * Theme
+ */
 
 :host {
     background: #333;
