Fix some bugs in saver and loader and handle description in actions.

--- a/themes/audigame/theme.css
+++ b/themes/audigame/theme.css
@@ -171,6 +171,11 @@ html /deep/ dude-sidebar .subtitle {
 html /deep/ dude-sidebar /deep/ .box input[is="core-input"] {
     color: #ccc;
 }
+html /deep/ dude-sidebar /deep/ p {
+    margin: 20px;
+    color: #888;
+    font-style: italic;
+}
 
 /**
  * Graph
