--- a/themes/audigame/theme.css
+++ b/themes/audigame/theme.css
@@ -70,6 +70,11 @@ html /deep/ paper-button.full {
     margin: 0;
 }
 
+/* Progress */
+html /deep/ paper-progress::shadow #activeProgress {
+    background-color: rgb(243, 156, 18);
+}
+
 /* Toast */
 html /deep/ paper-toast {
     color: #eee;
